<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.view.fragment.auth.AuthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_auth_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/fragment_auth_additional_sign_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/fragment_auth_additional_sign_options_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/fragment_auth_additional_sign_options_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/fragment_auth_additional_sign_options_list_first_item_google_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/fragment_auth_additional_sign_options_list_first_item_google_icon_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/fragment_auth_additional_sign_options_list_first_item_google_icon_foreground"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/fragment_auth_additional_sign_options_list_first_item_google_icon_background"
                            app:layout_constraintStart_toStartOf="@+id/fragment_auth_additional_sign_options_list_first_item_google_icon_background"
                            app:layout_constraintTop_toTopOf="@+id/fragment_auth_additional_sign_options_list_first_item_google_icon_background"
                            app:srcCompat="@drawable/icon_social_google" />

                        <ImageView
                            android:id="@+id/fragment_auth_additional_sign_options_list_first_item_google_icon_background"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/shape_ellipse" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/fragment_auth_additional_sign_options_list_first_item_google_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/socials_google"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragment_auth_additional_sign_options_list_first_item_facebook_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/fragment_auth_additional_sign_options_list_first_item_facebook_icon_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/fragment_auth_additional_sign_options_list_first_item_facebook_icon_foreground"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/fragment_auth_additional_sign_options_list_first_item_facebook_icon_background"
                            app:layout_constraintStart_toStartOf="@+id/fragment_auth_additional_sign_options_list_first_item_facebook_icon_background"
                            app:layout_constraintTop_toTopOf="@+id/fragment_auth_additional_sign_options_list_first_item_facebook_icon_background"
                            app:srcCompat="@drawable/icon_social_facebook" />

                        <ImageView
                            android:id="@+id/fragment_auth_additional_sign_options_list_first_item_facebook_icon_background"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/shape_ellipse" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/fragment_auth_additional_sign_options_list_first_item_facebook_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/socials_facebook"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragment_auth_additional_sign_options_list_first_item_twitter_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/fragment_auth_additional_sign_options_list_first_item_twitter_icon_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/fragment_auth_additional_sign_options_list_first_item_twitter_icon_foreground"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/fragment_auth_additional_sign_options_list_first_item_twitter_icon_background"
                            app:layout_constraintStart_toStartOf="@+id/fragment_auth_additional_sign_options_list_first_item_twitter_icon_background"
                            app:layout_constraintTop_toTopOf="@+id/fragment_auth_additional_sign_options_list_first_item_twitter_icon_background"
                            app:srcCompat="@drawable/icon_social_twitter" />

                        <ImageView
                            android:id="@+id/fragment_auth_additional_sign_options_list_first_item_twitter_icon_background"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/shape_ellipse" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/fragment_auth_additional_sign_options_list_first_item_twitter_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/socials_twitter"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_auth_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/fragment_auth_additional_sign_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth_sign_in"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_auth_email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/textInputNotFocusedColor"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_auth_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/auth_hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textInputFocusedColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_auth_password_input_layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textInputNotFocusedColor"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_auth_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/auth_hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/textInputFocusedColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_auth_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/auth_sign_in" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_auth_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:text="@string/auth_sign_up"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>